# rubbish-lang

./: .gitignore  CMakeLists.txt  Readme.md
examples/: .check5.ishc.swp  asyncfactorial.ish  asyncfactorial.ishc  check5.ishc  factorial.ish  factorial.ishc  hof.ish  lol.ish  lol.ishc  potato.ish  potato.ishc  sumseries.ishc
rubbish/: CMakeLists.txt  defs.cpp  defs.h  ds.h  lexer.l  library.h  main.c  parser.cpp  parser.h  parser.y  rubbish.cpp  rubbish.h  type.cpp  type.h
rubbishc/: .gitignore  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  lol.ishc  package.yaml
rubbishc/app/: Main.hs
rubbishc/src/: .Lib.hs.swp  Lib.hs
